--- a/themes/gohugoioTheme/layouts/partials/home-page-sections/open-source-involvement.html
+++ b/themes/gohugoioTheme/layouts/partials/home-page-sections/open-source-involvement.html
@@ -38,7 +38,7 @@
     <h3 class="f3 mv3 accent-color-light">More Ways to Contribute</h3>
     <ul class="list ma0 pa0">
       <li class="mb3 f4">
-        <a href="https://github.com/Abyssal-Fish-Technology/ly_docs" class="link mid-gray dim">
+        <a href="https://github.com/abyssalfish-os/abyssalfish-os.github.io" class="link mid-gray dim">
           Improve the Docs {{ partial "svg/link-ext.svg" (dict "fill" "#333" "size" "14") }}
         </a>
       </li>
