--- a/themes/gohugoioTheme/layouts/partials/site-footer.html
+++ b/themes/gohugoioTheme/layouts/partials/site-footer.html
@@ -6,6 +6,10 @@
             流影由 <a href="https://github.com/orgs/Abyssal-Fish-Technology" class="link">深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与<br />
           </div>
 
+<!--         <div class="center w4">-->
+<!--            <img src="/images/wx_public.jpg" alt="关注微信公众号">-->
+<!--          </div>-->
+
           <ul class="center f6 list ma0 mv4 pa0 tc">
             <li class="dib mr3"><a href="https://github.com/Abyssal-Fish-Technology/ly_vis" class="dim link light-gray pv2">可视化交互分析(ly_vis)</a></li>
             <li class="dib mr3"><a href="https://github.com/Abyssal-Fish-Technology/ly_server" class="dim link light-gray pv2">管理引擎(ly_server)</a></li>
@@ -21,8 +25,11 @@
 
       </div>
 
-    </div>
+      <div class="w-100 w-30-l"> 
+            <img src="/images/wx_public.jpg" alt="关注微信公众号">
+      </div>
 
+    </div>
 
     <div class="bg-primary-color-dark bottom-0 left-0 right-0 dn-l fixed pb3 ph3 pt3 z-2">
       {{- partial "nav-mobile.html" . -}}
