--- a/themes/gohugoioTheme/layouts/partials/site-footer.html
+++ b/themes/gohugoioTheme/layouts/partials/site-footer.html
@@ -6,9 +6,9 @@
             流影由 <a href="https://github.com/orgs/Abyssal-Fish-Technology" class="link">深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与<br />
           </div>
 
-<!--         <div class="center w4">-->
-<!--            <img src="/images/wx_public.jpg" alt="关注微信公众号">-->
-<!--          </div>-->
+         <div class="center w4">
+            <img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100">
+          </div>
 
           <ul class="center f6 list ma0 mv4 pa0 tc">
             <li class="dib mr3"><a href="https://github.com/Abyssal-Fish-Technology/ly_vis" class="dim link light-gray pv2">可视化交互分析(ly_vis)</a></li>
@@ -23,10 +23,6 @@
             {{- with .Site.Params.gitter -}}<li class="dib"><a href="{{ . }}" class="dim link light-gray pv2">来 Gitter 沟通留言</a></li>{{- end -}}
           </ul>
 
-      </div>
-
-      <div class="w-100 w-30-l"> 
-            <img src="/images/wx_public.jpg" alt="关注微信公众号">
       </div>
 
     </div>
