add baidu count

--- a/themes/gohugoioTheme/layouts/_default/baseof.html
+++ b/themes/gohugoioTheme/layouts/_default/baseof.html
@@ -96,6 +96,15 @@
     {{ if hugo.IsProduction }}
       {{ partial "gtag" . }}
     {{ end }}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?20e14b502dcd423ae21f8119455786ab";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
   </head>
 
