--- a/themes/gohugoioTheme/layouts/partials/hero.html
+++ b/themes/gohugoioTheme/layouts/partials/hero.html
@@ -1,18 +1,28 @@
-<header class="bg-primary-color-dark ph4 tc" role="banner">
+<header class="bg-primary-color ph4 tc" role="banner">
   <section class="center pb4 pb5-l ph4-l pt3 pt5-ns w-90 w-60-l">
-<!--    <div class="center w-100 w-50-ns">-->
-<!--        <img src="/images/hugo-logo-wide.svg" alt="Hugo Logo">-->
-<!--    </div>-->
+    <div class="center w-140 w-60-ns">
+        <img src="/img/main2.png" alt="流影">
+    </div>
+
     {{ with .Site.Params.description }}
       <h2 class="f3 f1-l fw4 white-90 m0 lh-title pt2 pb3 pv0-ns">
         {{ . }}
       </h2>
     {{ end }}
-    <div class="lh-copy f4 w-90-ns center fw2 silver tc tc-ns">
+
+
+
+    <div class="lh-copy f4 w-90-ns center fw2 white tc tc-ns">
       {{ .Content }}
     </div>
-    <div class="w4 mv4 center">
-      <a class="f5 db link grow tc v-mid bg-blue white ba b--blue ph3 pv2 br1" href="/getting-started/quick-start/">Quick Start</a>
-    </div>
+<!--    <div class="w4 mv4 center">-->
+<!--      <a class="f5 db link grow tc v-mid bg-dark-green white ba b&#45;&#45;blue ph3 pv2 br1" href="/getting-started/quick-start/">Quick Start</a>-->
+<!--    </div>-->
+
+    <ul class="center f6 list ma0 mv3 pa0 tc">
+      <li class="dib mr3"><a class="f5 db link grow tc v-mid bg-green white ba b--blue ph3 pv2 br1" href="/demo/">开始体验(Try Demo)</a></li>
+      <li class="dib mr3"><a class="f5 db link grow tc v-mid bg-green white ba b--blue ph3 pv2 br1" href="/getting-started/quick-start/">快速上手(Quick Start)</a></li>
+    </ul>
+
   </section>
 </header>
