--- a/themes/gohugoioTheme/layouts/partials/site-nav.html
+++ b/themes/gohugoioTheme/layouts/partials/site-nav.html
@@ -1,5 +1,5 @@
 {{ $currentPage := . }}
-<nav class="bg-primary-color-dark pv4 w-100" role="navigation">
+<nav class="bg-primary-color pv4 w-100" role="navigation">
 
   <div class="center flex-ns flex-wrap items-center justify-start mw9">
 
@@ -12,7 +12,7 @@
       {{ range .Site.Menus.global }}
         <li class="f5 dib mr4" role="menuitem">
             {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
-          <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
+          <a href="{{ .URL }}" class="dim link {{ if $currentPage.IsMenuCurrent "global" . }} white {{else}} white {{ end }}">
             {{ .Name }}
               {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
             {{ $post_status := printf "%s" .Post }}
