--- a/themes/gohugoioTheme/layouts/partials/site-footer.html
+++ b/themes/gohugoioTheme/layouts/partials/site-footer.html
@@ -13,9 +13,9 @@
         <ul class="center f6 list ma0 mv4 pa0 tc">
 
           <li class="dib mr3"><img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100"> </li>
-          <li class="dib mr3 white"> 公众号 </li>
-          <li class="dib mr3 white"> 沟通群 </li>
-          <li class="dib mr3"><img src="/images/wx_group.png" alt="微信群" width="100" height="100"></li>
+<!--          <li class="dib mr3 white"> 公众号 </li>-->
+<!--          <li class="dib mr3 white"> 沟通群 </li>-->
+<!--          <li class="dib mr3"><img src="/images/wx_group.png" alt="微信群" width="100" height="100"></li>-->
 
         </ul>
 
