--- a/themes/gohugoioTheme/layouts/partials/site-footer.html
+++ b/themes/gohugoioTheme/layouts/partials/site-footer.html
@@ -1,23 +1,21 @@
-<footer class="bg-primary-color-dark ph4-ns pt4 relative w-100" role="contentinfo">
+<footer class="bg-primary-color-dark ph4-ns pt2 relative w-100" role="contentinfo">
     <div class="center flex-ns flex-wrap justify-between mw9 w-90">
-      <div class="center pb3 pt4 ">
+      <div class="center pb3 pt2 ">
 
-<div class="b f3  light-gray mb3 nested-links tc">
-            流影由 <a href="https://github.com/orgs/Abyssal-Fish-Technology" class="link">深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与和使用反馈<br />
-          </div>
+
 
 <!--         <div class="center w4">-->
 <!--            <img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100">-->
 <!--           <img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100">-->
 <!--          </div>-->
-        <ul class="center f6 list ma0 mv4 pa0 tc">
+<!--        <ul class="center f6 list ma0 mv4 pa0 tc">-->
 
-          <li class="dib mr3"><img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100"> </li>
-          <li class="dib mr3 white"> 公众号 </li>
-          <li class="dib mr3 white"> 沟通群 </li>
-          <li class="dib mr3"><img src="/images/wx_group.png" alt="微信群" width="100" height="100"></li>
+<!--          <li class="dib mr3"><img src="/images/wx_public.jpg" alt="关注微信公众号" width="100" height="100"> </li>-->
+<!--          <li class="dib mr3 white"> 公众号 </li>-->
+<!--          <li class="dib mr3 white"> 沟通群 </li>-->
+<!--          <li class="dib mr3"><img src="/images/wx_group.png" alt="微信群" width="100" height="100"></li>-->
 
-        </ul>
+<!--        </ul>-->
 
           <ul class="center f6 list ma0 mv4 pa0 tc">
             <li class="dib mr3"><a href="https://github.com/Abyssal-Fish-Technology/ly_vis" class="dim link light-gray pv2">可视化交互分析(ly_vis)</a></li>
@@ -27,12 +25,14 @@
 
           </ul>
 
-          <ul class="center f6 list ma0 mv3 pa0 tc">
-            {{- with .Site.Params.github_repo -}}<li class="dib mr3"><a href="{{ . }}" class="dim link light-gray pv2">到 Github 发起 Issue</a></li>{{- end -}}
-            {{- with .Site.Params.gitter -}}<li class="dib"><a href="{{ . }}" class="dim link light-gray pv2">来 Gitter 沟通留言</a></li>{{- end -}}
-          </ul>
+<!--          <ul class="center f6 list ma0 mv3 pa0 tc">-->
+<!--            {{- with .Site.Params.github_repo -}}<li class="dib mr3"><a href="{{ . }}" class="dim link light-gray pv2">到 Github 发起 Issue</a></li>{{- end -}}-->
+<!--            {{- with .Site.Params.gitter -}}<li class="dib"><a href="{{ . }}" class="dim link light-gray pv2">来 Gitter 沟通留言</a></li>{{- end -}}-->
+<!--          </ul>-->
 
-
+<div class="b f3  light-gray mb3 nested-links tc">
+            流影是深海鱼（北京）科技有限公司 </a>开源项目之一，欢迎参与<br />
+          </div>
 
       </div>
 
